# claudio

./: .gitignore  .private-patterns.example  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/hooks/: pre-push
.github/workflows/: ci.yml
src/claudio/: app.py  health.py  parsers.py  pricing.default.json  retention.py  store.py  templates.py
src/claudio/static/js/: tour.js
tests/: conftest.py  test_export.py  test_health.py  test_parsers.py  test_pricing.py  test_retention.py  test_routes.py  test_store.py  test_templates.py  test_tour.py
tests/fixtures/: sample.jsonl
