[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claudio"
version = "0.1.0"
description = "Browse your Claude Code sessions in a local web app"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = ["flask>=3.0"]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
claudio = "claudio.app:main"

[tool.setuptools.packages.find]
where = ["src"]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.format]
quote-style = "double"

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.9",
]
