[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claudio"
version = "0.6.0"
description = "Browse your Claude Code sessions in a local web app"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = ["flask>=3.0"]

[project.scripts]
claudio = "claudio.app:main"

[tool.setuptools.packages.find]
where = ["src"]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.format]
quote-style = "double"

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.9",
]
